default/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-test-route
  namespace: default
  labels:
    example: default-test
spec:
  parentRefs:
    - name: default-gateway
      namespace: kgateway-system
  rules:
    - backendRefs:
        - name: gw-test
          port: 80
